--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> <!-- Establece la codificación de caracteres a UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Hace que la página sea responsiva en dispositivos móviles -->
-    <title>Document</title> <!-- Título de la página que aparece en la pestaña del navegador -->
+    <title>Portafolio</title> <!-- Título de la página que aparece en la pestaña del navegador -->
     <link rel="stylesheet" href="portafolio.css"> <!-- Vincula el archivo CSS para aplicar estilos -->
 </head>
 <body>
