--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Hace que la página sea responsiva en dispositivos móviles -->
     <title>Portafolio</title> <!-- Título de la página que aparece en la pestaña del navegador -->
     <link rel="stylesheet" href="portafolio.css"> <!-- Vincula el archivo CSS para aplicar estilos -->
+    "<link rel="icon" href="Logo.png" type="image/x-icon">
 </head>
 <body>
 
@@ -64,12 +65,12 @@
                 <div class="project"> <!-- Otra tarjeta de proyecto -->
                     <img src="DNS-icono.png" alt="Proyecto 3"> <!-- Imagen del proyecto -->
                     <h2>DNS</h2> <!-- Título del proyecto -->
-                    <p>Creación del sistema DNS.</p> <!-- Descripción del proyecto -->
+                    <p>Creación del sistema DNS e implementación a las redes.</p> <!-- Descripción del proyecto -->
                 </div>
                 <div class="project"> <!-- Otra tarjeta de proyecto -->
                     <img src="DHCP-icono.png" alt="Proyecto 4"> <!-- Imagen del proyecto -->
                     <h2>DCHP</h2> <!-- Título del proyecto -->
-                    <p>Explicación del DCHP y implementacion en los equipos.</p> <!-- Descripción del proyecto -->
+                    <p>Explicación del DCHP e implementacion en los equipos.</p> <!-- Descripción del proyecto -->
                 </div>
                 <div class="project"> <!-- Otra tarjeta de proyecto -->
                     <img src="marketing-icono.png" alt="Proyecto 5"> <!-- Imagen del proyecto -->
