--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Hace que la página sea responsiva en dispositivos móviles -->
     <title>Portafolio</title> <!-- Título de la página que aparece en la pestaña del navegador -->
     <link rel="stylesheet" href="portafolio.css"> <!-- Vincula el archivo CSS para aplicar estilos -->
-    "<link rel="icon" href="Logo.png" type="image/x-icon">
+    "<link rel="icon" href="Logo.png" type="Logo.png">
 </head>
 <body>
 
